# earthshine

./: README.md  background_spectrum.ipynb  background_spectrum_extended.ipynb  bethe_bloch.ipynb  bethe_block.ipynb  calculation.py  cutoffs_file.pkl  earthshine_tools.py  energies_and_distances_file.pkl  energy_loss_prototyping.ipynb  muon_kinematic_distributions_from_signal_using_phasespace.ipynb  practice_integrating_slices_of_rock.py  pyproject.toml  pyproject.toml.BAK  setup.py  signal_spectrum_from_decays.ipynb  spectra_for_different_DM_masses.ipynb  test_bethe_bloch.py  tests.py  tests_of_functions.ipynb
CMS_muon_work/: COPY_OVER_FILES_FROM_CERN.sh  COPY_OVER_FILES_FROM_FNAL.sh  README.md  RUN_EVERYTHING.sh  SAMPLE_COMMANDS.md  UndergroundCosmicSPLooseMu_cfi_py_GEN_SIM.py  examine_other_dataasets.py  examine_other_datasets_josie.py  examine_other_datasets_josie_step1.py  examine_other_datasets_josie_step3.py  examine_step1.py  examine_step1_upawk.ipynb  examine_step3.py  explore_uscb_ntuples.ipynb  exploring_uscb_ntuples_with_Sanjit.ipynb  kalman filter and hough transform.ipynb  plotting_some_of_the_data_dumps-bellis.ipynb  plotting_some_of_the_data_dumps.ipynb  step2_DIGI_L1_DIGI2RAW_HLT.py  step3_RAW2DIGI_L1Reco_RECO_ALCA_DQM.py
GENIE/: GENIE_ADD_SPLINE_FILES.sh  GENIE_CONFIG_SCRIPT.sh  GENIE_CONVERT_FILES_TO_GST.sh  GENIE_GENERATE_INTERACTION.sh  GENIE_GENERATE_SPLINES.sh  GENIE_PLAYING_AROUND.sh  INSTALL_HEPMC.sh  MY_CONFIGURE_SCRIPT.sh  MY_ROOT_CONFIG_SCRIPT.sh  analyze_gst_files.ipynb  change_coordinates_for_nuhepmc_files_and_convert_to_hepmc2.py
background_and_signal_acceptance_studies/: CMS_simulation.ipynb  dm_generation_tools.py  generate_signal_events.ipynb
darkcappy/: DarkCapPy_Template.ipynb
earthshine/: __init__.py  cross_section.csv  earthshine_tools.py  flux_curve.csv  ice_cube_cross_section.csv  pdg_cross_sections.csv
work_with_Tamas/: COPY_OVER.sh
(+10 files in other folders)
