[build-system]
requires = ["setuptools>=61.0", 'numpy', 'scipy', 'matplotlib']
build-backend = "setuptools.build_meta"

[project]
name = "earthshine"
version = "0.0.1"
authors = [
  { name="Matt Bellis and Josephine Swann", email="mbellis@siena.edu" },
]
description = "Tools relevant for searches for upward-going muons."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mattbellis/earthshine"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# This is instead of `src` I think
where = ["earthshine"]

[tool.setuptools.package-data]
mypkg = ["*.csv"]
