[build-system]
requires = ["pip>=20.3", "setuptools==60", 'numpy', 'scipy']
build-backend = "setuptools.build_meta"

[project]
name = "earthshine"
version = "0.0.1"
authors = [
  { name="Matt Bellis and Josephine Swann", email="mbellis@siena.edu" },
]
description = "Tools relevant for searches for upward-going muons."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mattbellis/earthshine"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = True

[tool.setuptools.packages.find]
# This is instead of `src` I think
where = ["earthshine"]

[tool.setuptools.package-data]
mypkg = ["*.csv"]
